<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账号"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/accountEditText"
            android:textColor="#000000"
            android:hint="校园网账号（如19stu）"
            android:textSize="18sp"
            android:singleLine="true"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/custom_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="密码"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:textColor="#000"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="密码"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:padding="5dp"
            android:background="@drawable/custom_edit_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#ffffff"
        android:background="@drawable/custom_button"
        android:baselineAligned="false"
        android:text="登录" />

</LinearLayout>